# daily-driver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  config.yaml  conftest.py  context.md  context.md.example  prompt-enlighten-migration.md  pyproject.toml  settings.json  settings.json.tmpl  tox.ini
.ci-tools/: detect-python.sh  setup-venv.sh
.claude/agents/: code-quality-pragmatist.md  code-reviewer.md  reality-check-manager.md
.claude/commands/: sk-review-ci.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  claude-review.yaml  claude.yaml  codeql.yaml  install-smoke.yaml  install-smoke.yml  release.yaml  release.yml
agents/: work-planner.md
commands/: check-in.md  day-end.md  day-start.md  focus.md  interview-prep.md  month-end.md  prep.md  review-prs.md  setup.md  standup.md  voice-update.md  week-end.md
docs/: README.md  cli-tree.md  commands.md  concepts.md  configuration.md  customization.md  developer.md  extending.md  install.md  jobs-pipeline-investigation.md  ollama-setup.md  parity-audit.md  pipeline-build-vs-buy.md  quick-start.md  releasing.md  troubleshooting.md  usage.md
docs/dev/: README.md  developer.md  extending.md  releasing.md
launchd/: com.daily-driver.checkin.plist  com.daily-driver.day-end.plist  com.daily-driver.day-start.plist  com.daily-driver.gather-jobs.plist
makefiles/: _release_helper.py  clean.mk  install.mk  release.mk  setup.mk  testing.mk
scripts/: build-pipeline-summary.sh  build-session-delta.sh  build-standup.sh  calendar-check.sh  calendar-sync.sh  check-calendar-sync.sh  check-in-notify.sh  check-output-dir.sh  check-state-dir.sh  checkin-state.sh  commit-daily-notes.sh  commit-monthly.sh  commit-notes.sh  commit-weekly.sh  ensure-daily-dir.sh  extract-jira-refs.sh  find-session-id.sh  focus-mode.sh  gather-applications.sh  gather-calendar.sh  gather-carryforward.sh  gather-company-docs.sh  gather-git-activity.sh  gather-jira.sh  gather-jobs.sh  gather-notes-range.sh  gather-prs.sh  gather-rfcs.sh  gather-sessions.sh  gather-ticket-status.sh  get-output-dir.sh  get-state-dir.sh  hook-current-time.sh  init-output-dir.sh  launch-day-end.sh  launchd-install.sh  list-ruled-out.sh  list-weekly-summaries.sh  month-range.sh  monthly-save-path.sh  (+19 more)
source/daily_driver/: __main__.py
source/daily_driver/cli/: _common.py  cli.py
source/daily_driver/core/: clock.py  config.py  config_models.py  config_template.py  console.py  contract.py  daily_state.py  dates.py  doctor.py  focus.py  generate.py  git_discovery.py  jobs_archive.py  locking.py  logging.py  manifest.py  materialize.py  plan.py  progress.py  scheduler.py  scraper_status.py  session_pointer.py  statuses.py  summary.py  tracker.py  version_stamp.py  voice.py  workspace.py  yaml_store.py
source/daily_driver/gathers/: __init__.py  calendar.py  git.py  notes.py  sessions.py
source/daily_driver/integrations/: __init__.py  ai_provider.py  calendar_write.py  claude_cli.py  clipboard.py  git.py  icalbuddy.py  launchd.py  notify.py  ollama_client.py  playwright.py  terminal_launcher.py
source/daily_driver/launchd/: scrape-jobs.plist.j2
source/daily_driver/plugins/: __init__.py  _base.py  config.py
source/daily_driver/scraper/: __init__.py  _impl.py  comp.py  csv_io.py  enrichment.py  models.py  parsing.py  runner.py
source/daily_driver/templates/: .dd-config.yaml.j2  context.md  gitignore.j2  scheduler.default.yaml  settings.local.json.j2
tests/: conftest.py  fixtures.py  test_anthropic_scraper.py  test_config.py  test_csv.py  test_dedup.py  test_enrich.py  test_hn_scraper.py  test_location_filter.py  test_matching.py  test_scrapers.py
tests/test_cli/: test_calendar_cli.py  test_claude_launchers.py  test_cli.py  test_doctor.py  test_e2e.py  test_ensure_daily_dir.py  test_focus.py  test_gather.py  test_help.py  test_import_hygiene.py  test_init.py  test_jobs.py  test_paths.py  test_read.py  test_scheduler_cli.py  test_scrape_jobs.py  test_status.py  test_summary.py  test_tracker.py  test_voice_update.py
tests/test_core/: test_clock.py  test_config.py  test_config_behavior.py  test_config_models.py  test_config_template.py  test_console.py  test_contract.py  test_daily_state.py  test_dates.py  test_doctor.py  test_focus.py  test_generate.py  test_generate_contract.py  test_git_discovery.py  test_jobs_archive.py  test_locking.py  test_logging.py  test_logging_defer.py  test_manifest.py  test_materialize.py  test_materialize_contract.py  test_plan.py  test_progress.py  test_scheduler.py  test_session_pointer.py  test_shipped_prompts.py  test_statuses.py  test_summary.py  test_tracker.py  test_version_stamp.py  test_voice.py  test_workspace.py
tests/test_gathers/: test_calendar.py  test_git.py  test_notes.py  test_sessions.py
tests/test_integrations/: test_ai_provider.py  test_calendar_write.py  test_claude_cli.py  test_clipboard.py  test_launchd.py  test_notify.py  test_ollama_client.py  test_playwright.py  test_resolve_route.py  test_terminal_launcher.py
tests/test_plugins/: test_registry.py
tests/test_plugins/job_search/: test_archive_reopen.py  test_doctor.py  (+4 more)
tests/test_scraper/: test_apple.py  test_csv_io.py  test_csv_writer.py  test_dry_run_table.py  test_e2e_smoke.py  test_enrichment_failure_logging.py  test_enrichment_parallel.py  test_enrichment_skip.py  test_filters.py  test_hn_jobs.py  test_hn_who_is_hiring.py  test_http_retry.py  test_import.py  test_jobs_locking.py  test_jobspy_adapter.py  test_models.py  test_parsers.py  test_runner.py  test_runner_logging.py  test_source_registry.py  test_typed_enrichers.py  test_typed_pipeline.py  test_weworkremotely.py
(+165 files in other folders)
