[project]
name = "daily-driver"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.13",
    "lxml>=5.0",
    "playwright>=1.56",
    "pyyaml>=6.0",
    "python-jobspy>=1.1.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "tox>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = ["--import-mode=importlib", "-p", "no:warnings", "-v", "--tb=short"]

[tool.coverage.run]
source = ["scripts"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 79
show_missing = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311
isolated_build = false

[testenv]
skip_install = true
deps =
    pytest>=8.0
    pytest-cov>=5.0
    requests>=2.31
    beautifulsoup4>=4.13
    lxml>=5.0
    pyyaml>=6.0
    playwright>=1.56
    python-jobspy>=1.1.0,<2.0.0
commands =
    pytest --cov=scripts --cov-report=term-missing {posargs}
"""
